added user login and stats

--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -6,7 +6,17 @@
     <title></title>
   </head>
   <body>
-    <div id="cards-container">
+    <div id="login">
+      Enter Your Name:
+      <form action="/users" method="post">
+        <input type="text" name="name">
+        <input type="submit" name="submit">
+      </form>
+    </div>
+    <div id="card-container">
+
+    </div>
+    <div id="stats-container">
 
     </div>
   </body>
