flip card feature

--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="index.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title></title>
   </head>
   <body>
     <div id="login">
-      Enter Your Name:
-      <form action="/users" method="post">
-        <input type="text" name="name">
-        <input type="submit" name="submit">
-      </form>
+      <div id = "login_form">
+        Enter Your Name:
+        <form  action="/users" method="post">
+          <input type="text" name="name">
+          <input type="submit" name="submit">
+        </form>
+      </div>
     </div>
-    <div id="card-container">
+    <div class = "quiz-page">
+      <div id="card-container">
 
+      </div>
     </div>
     <div id="stats-container">
 
