--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -16,13 +16,15 @@
         </form>
       </div>
     </div>
-    <div class = "quiz-page">
-      <div id="card-container">
+    <div id="main-page">
+      <div id="stats-container">
 
       </div>
-    </div>
-    <div id="stats-container">
+      <div class = "quiz-page">
+        <div id="card-container">
 
+        </div>
+      </div>
     </div>
   </body>
 </html>
