--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -8,6 +8,18 @@
     <title></title>
   </head>
   <body>
+    <div id="navbar">
+      <header>
+        <img class="logo" src="" alt="">
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#">STATS</a></li>
+            <li><a href="#">TRANSLATE</a></li>
+          </ul>
+        </nav>
+        <a href="#"><button class="logout" type="button" name="button">Logout</button></a>
+      </header>
+    </div>
     <div id="login">
       <div id = "login_form">
         Enter Your Name:
