stats nav bar function

--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -8,7 +8,7 @@
     <title></title>
   </head>
   <body>
-    <div id="navbar">
+    <div hidden id="navbar">
       <header>
         <img class="logo" src="" alt="">
         <nav>
@@ -31,10 +31,10 @@
         </div>
       </div>
     </div>
-    <div id="main-page">
-      <div id="stats-container">
+    <div id="stats-container">
 
-      </div>
+    </div>
+    <div id="main-page">
       <div class = "quiz-page">
         <div id="card-container">
 
