--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -41,8 +41,10 @@
         <div id="card-container">
 
         </div>
+        <div class="selections-page">
+
+        </div>
       </div>
     </div>
-
   </body>
 </html>
