fonts radios and logout

--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -24,7 +24,7 @@
       <div class="login_container">
         <img id = "ellis-logo" src="images/Ellis_logo.png" alt="Logo">
         <div id = "login_form">
-          <form  action="/users" method="post">
+          <form  action="/users" method="post" id="name-input">
             <input type="text" name="name" placeholder="Enter Your Name">
             <input hidden type="submit" name="submit">
           </form>
