--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -41,11 +41,17 @@
         <div id="card-container">
 
         </div>
-        <div class="selections-page">
+        <!-- <div class="selections-page">
 
-        </div>
+        </div> -->
       </div>
       <button id="learn-more" type="button" name="references">Learn More</button>
+    </div>
+    <div id="about-container">
+      <div class="about-content">
+        <p>Inspired by the Ellis Island, symbol of immigration in the United States, this single page application helps you study for the civics test during the naturalization process. We hope to make this visual and interactive platform a cross-linguistic, cross-cultural aid to those applying for their citizenship.</p>
+        <p id="signature">Chris & Emi</p>
+      </div>
     </div>
 
 
@@ -285,9 +291,6 @@
       </div>
     </div>
 
-    <div id="about-container">
-      <p id="about-content" class="font">Hello</p>
-    </div>
 
   </body>
 </html>
