--- a/project-frontend/index.html
+++ b/project-frontend/index.html
@@ -12,7 +12,7 @@
       <header>
         <nav>
           <img class="logo" src="images/Ellis_logo.png" alt="">
-          
+
             <a href="#" id="list-left">STATS</a>
             <a href="#" id="list-right">ABOUT</a>
 
@@ -35,7 +35,7 @@
         <canvas id="my-chart" width="500" height="750"></canvas>
 
     </div>
-    <div id="main-page">
+    <div hidden id="main-page">
       <div class = "quiz-page">
         <div id="card-container">
 
